tests: seeding
